--- a/proj1/app/src/main/AndroidManifest.xml
+++ b/proj1/app/src/main/AndroidManifest.xml
@@ -9,14 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".EndActivity"></activity>
-        <activity android:name=".MainActivity"/>
+        <activity android:name=".GameActivity"></activity>
+        <activity android:name=".EndActivity" />
+        <activity android:name=".MainActivity" />
         <activity android:name=".OpenActivity">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
