--- a/proj2/proj1/app/src/main/AndroidManifest.xml
+++ b/proj2/proj1/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CreateActivity"></activity>
+        <activity android:name=".DummyActivity"></activity>
+        <activity android:name=".CreateActivity" />
         <activity android:name=".GameActivity" />
         <activity android:name=".EndActivity" />
         <activity android:name=".OpenActivity">
