--- a/Project2/app/src/main/AndroidManifest.xml
+++ b/Project2/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CreateActivity"></activity>
+        <activity
+            android:name=".DummyActivity"
+            android:label="@string/title_activity_dummy"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".CreateActivity" />
         <activity
             android:name=".StartActivity"
             android:label="@string/app_name"
