--- a/Project2/app/src/main/AndroidManifest.xml
+++ b/Project2/app/src/main/AndroidManifest.xml
@@ -11,10 +11,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".LoginActivity"></activity>
         <activity
             android:name=".DummyActivity"
             android:label="@string/title_activity_dummy"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".CreateActivity" />
         <activity
             android:name=".StartActivity"
