--- a/Project2/app/src/main/AndroidManifest.xml
+++ b/Project2/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".EndActivity"></activity>
+        <activity android:name=".GameActivity"></activity>
         <activity android:name=".LoginActivity" />
         <activity
             android:name=".WaitingActivity"
